--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,6 @@ html, body {
 .advertising {
   background: #fafafa;
   position: absolute;
-  top: 35px;
-  right: 35px;
   right: 0;
   width: 160px;
   height: 320px;
@@ -39,6 +37,14 @@ html, body {
           align-items: center;
   color: #999999;
   font-size: 20px;
+}
+
+.advertising-1 {
+  top: 35px;
+}
+
+.advertising-2 {
+  top: 380px;
 }
 
 .container {
