--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ html, body {
   padding: 0;
   font-family: "Roboto", sans-serif;
   font-size: 18px;
+  overflow-x: hidden;
 }
 
 .header {
@@ -21,6 +22,7 @@ html, body {
 }
 
 .btn-up {
+  display: none;
   position: fixed;
   bottom: 24px;
   right: 24px;
@@ -74,6 +76,7 @@ html, body {
 }
 
 .advertising {
+  z-index: 5;
   background: #fafafa;
   position: absolute;
   right: 0;
@@ -476,18 +479,14 @@ html, body {
 
 .company-info__txt-desc {
   margin: 0;
-  display: -webkit-box;
-  display: -moz-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 8;
-  overflow: hidden;
 }
 
-.company-info__txt-more, .company-info__txt-less {
+.company-info__txt-more {
+  display: none;
   color: #005fae;
 }
 
-.company-info__txt-more:hover, .company-info__txt-less:hover {
+.company-info__txt-more:hover {
   cursor: pointer;
   text-decoration: underline;
 }
@@ -505,46 +504,126 @@ html, body {
   list-style-type: none;
 }
 
-@media (min-width: 1281px) {
-  /* CSS */
+@media (max-width: 1366px) {
+  .container {
+    width: 1280px;
+  }
+  .search, .company {
+    width: 1080px;
+  }
+  .company-info {
+    margin-left: 20px;
+  }
 }
 
-/* 
-  ##Device = Laptops, Desktops
-  ##Screen = B/w 1025px to 1280px
-*/
-@media (min-width: 1025px) and (max-width: 1280px) {
-  /* CSS */
+@media (max-width: 1280px) {
+  .advertising {
+    right: -50px;
+  }
+  .container {
+    width: 1024px;
+  }
+  .search, .company {
+    width: 864px;
+  }
+  .company-ads__table td {
+    padding: 8px 5px;
+  }
+  .company-ads__table td:nth-child(3) {
+    padding: 0;
+  }
 }
 
-/* 
-  ##Device = Tablets, Ipads (portrait)
-  ##Screen = B/w 768px to 1024px
-*/
-@media (min-width: 768px) and (max-width: 1024px) {
-  /* CSS */
+@media (max-width: 1024px) {
+  .advertising {
+    display: none;
+  }
+  .visible {
+    display: block;
+  }
+  .container {
+    width: 100%;
+  }
+  .search, .company {
+    width: 100%;
+  }
+  .company-info__txt-desc {
+    display: -webkit-box;
+    display: -moz-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 8;
+    overflow: hidden;
+  }
+  .company-info__txt-desc.active {
+    -webkit-line-clamp: unset;
+    overflow: auto;
+  }
+  .company-info__txt-more {
+    display: block;
+  }
 }
 
-/* 
-  ##Device = Tablets, Ipads (landscape)
-  ##Screen = B/w 768px to 1024px
-*/
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-  /* CSS */
+@media (max-width: 768px) {
+  .search-list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  .company {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .company-main {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    width: 100%;
+  }
+  .company-info {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    width: 100%;
+    margin: 0;
+    border: 1px solid #F0F0F0;
+  }
+  .company-info__txt-desc {
+    -webkit-line-clamp: 4;
+  }
+  .company-info img {
+    float: right;
+  }
+  .company-info__wrp {
+    background: #fff;
+  }
 }
 
-/* 
-  ##Device = Low Resolution Tablets, Mobiles (Landscape)
-  ##Screen = B/w 481px to 767px
-*/
-@media (min-width: 481px) and (max-width: 767px) {
-  /* CSS */
-}
-
-/* 
-  ##Device = Most of the Smartphones Mobiles (Portrait)
-  ##Screen = B/w 320px to 479px
-*/
-@media (min-width: 320px) and (max-width: 480px) {
-  /* CSS */
+@media (max-width: 480px) {
+  .container {
+    padding: 16px;
+  }
+  .search-list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .search-btn {
+    margin-top: 25px;
+  }
+  .search-company {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .search-company__title {
+    margin-top: 20px;
+  }
+  .search-company__title-main {
+    font-size: 28px;
+  }
+  .company-ads {
+    overflow-x: scroll;
+  }
 }
